@@ -17,6 +17,7 @@ dh-make-perl (0.64) UNRELEASED; urgency=low
     + uses the lists on http://www.debian.org/devel/wnpp
   * add --source-format option (defaults to "1.0")
   * --refresh: fix pruning of binary package dependencies
+    + also fix pruning of redundant perl(-base) (build-)dependencies
 
   [ gregor herrmann ]
   * DhMakePerl: update_file_list() allows to --refresh --only docs and
